<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="reset">Reset</string>
    <string name="reserve">Reserve</string>
    <string name="select_reservation_date">SELECT RESERVATION DATE</string>
    <string name="select_reservation_time">SELECT RESERVATION TIME</string>
    <string name="smoking">Smoking</string>
    <string name="_1">1</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="name1">Name</string>
    <string name="_1234_5678">1234 5678</string>
    <string name="size">Size</string>
</resources>